[gd_scene load_steps=8 format=3 uid="uid://d4baqm2niu2b0"]

[ext_resource type="Script" uid="uid://c345mgnsemfif" path="res://ui/settings_menu.gd" id="1_xutny"]
[ext_resource type="Material" uid="uid://c7n6hmrhx0x1n" path="res://ui/crosshair.tres" id="2_xutny"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xutny"]
bg_color = Color(0.15294118, 0.15294118, 0.15294118, 1)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(0.06879826, 0.06879829, 0.068798244, 1)
border_blend = true
corner_radius_top_left = 32
corner_radius_top_right = 32
corner_radius_bottom_right = 32
corner_radius_bottom_left = 32
expand_margin_left = 32.0
expand_margin_top = 32.0
expand_margin_right = 32.0
expand_margin_bottom = 32.0

[sub_resource type="LabelSettings" id="LabelSettings_xutny"]
font_size = 24
outline_size = 4
outline_color = Color(0, 0, 0, 1)
stacked_outline_count = 1
stacked_outline_0/size = 1
stacked_outline_0/color = Color(1, 1, 1, 1)

[sub_resource type="LabelSettings" id="LabelSettings_a6yft"]
font_size = 20
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2ty5h"]
bg_color = Color(0.80049086, 0.8004908, 0.8004906, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.15294118, 0.15294118, 0.15294118, 1)
border_blend = true
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 4
shadow_offset = Vector2(2, 2)
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a6yft"]
bg_color = Color(0.15294118, 0.15294118, 0.15294118, 1)

[node name="SettingsMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_xutny")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 128
theme_override_constants/margin_top = 64
theme_override_constants/margin_right = 128
theme_override_constants/margin_bottom = 64

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_xutny")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
theme_override_constants/separation = 32

[node name="SettingsLabel" type="Label" parent="MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 24
text = "SETTINGS"
label_settings = SubResource("LabelSettings_xutny")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Audio" type="VBoxContainer" parent="MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/VBoxContainer/Audio"]
layout_mode = 2
text = "AUDIO VOLUMES"
label_settings = SubResource("LabelSettings_a6yft")
horizontal_alignment = 1

[node name="Master" type="HBoxContainer" parent="MarginContainer/PanelContainer/VBoxContainer/Audio"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/VBoxContainer/Audio/Master"]
layout_mode = 2
size_flags_horizontal = 3
text = "Master"

[node name="MasterVolume" type="Label" parent="MarginContainer/PanelContainer/VBoxContainer/Audio/Master"]
unique_name_in_owner = true
layout_mode = 2
text = "50"

[node name="MasterSlider" type="HSlider" parent="MarginContainer/PanelContainer/VBoxContainer/Audio/Master"]
unique_name_in_owner = true
custom_minimum_size = Vector2(256, 0)
layout_mode = 2

[node name="Music" type="HBoxContainer" parent="MarginContainer/PanelContainer/VBoxContainer/Audio"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/VBoxContainer/Audio/Music"]
layout_mode = 2
size_flags_horizontal = 3
text = "Music"

[node name="MusicVolume" type="Label" parent="MarginContainer/PanelContainer/VBoxContainer/Audio/Music"]
unique_name_in_owner = true
layout_mode = 2
text = "50"

[node name="MusicSlider" type="HSlider" parent="MarginContainer/PanelContainer/VBoxContainer/Audio/Music"]
unique_name_in_owner = true
custom_minimum_size = Vector2(256, 0)
layout_mode = 2

[node name="Sounds" type="HBoxContainer" parent="MarginContainer/PanelContainer/VBoxContainer/Audio"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/VBoxContainer/Audio/Sounds"]
layout_mode = 2
size_flags_horizontal = 3
text = "Sounds"

[node name="SoundsVolume" type="Label" parent="MarginContainer/PanelContainer/VBoxContainer/Audio/Sounds"]
unique_name_in_owner = true
layout_mode = 2
text = "50"

[node name="SoundsSlider" type="HSlider" parent="MarginContainer/PanelContainer/VBoxContainer/Audio/Sounds"]
unique_name_in_owner = true
custom_minimum_size = Vector2(256, 0)
layout_mode = 2

[node name="Video" type="VBoxContainer" parent="MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/VBoxContainer/Video"]
layout_mode = 2
text = "VIDEO"
label_settings = SubResource("LabelSettings_a6yft")
horizontal_alignment = 1

[node name="Fullscreen" type="HBoxContainer" parent="MarginContainer/PanelContainer/VBoxContainer/Video"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/VBoxContainer/Video/Fullscreen"]
layout_mode = 2
size_flags_horizontal = 3
text = "Fullscreen"

[node name="CheckBox" type="CheckBox" parent="MarginContainer/PanelContainer/VBoxContainer/Video/Fullscreen"]
layout_mode = 2

[node name="Vsync" type="HBoxContainer" parent="MarginContainer/PanelContainer/VBoxContainer/Video"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/VBoxContainer/Video/Vsync"]
layout_mode = 2
size_flags_horizontal = 3
text = "Vsync"

[node name="CheckBox" type="CheckBox" parent="MarginContainer/PanelContainer/VBoxContainer/Video/Vsync"]
layout_mode = 2

[node name="Shadows" type="HBoxContainer" parent="MarginContainer/PanelContainer/VBoxContainer/Video"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/VBoxContainer/Video/Shadows"]
layout_mode = 2
size_flags_horizontal = 3
text = "Shadow Quality"

[node name="ShadowButton" type="OptionButton" parent="MarginContainer/PanelContainer/VBoxContainer/Video/Shadows"]
layout_mode = 2
selected = 0
item_count = 3
popup/item_0/text = "low"
popup/item_0/id = 0
popup/item_1/text = "medium"
popup/item_1/id = 1
popup/item_2/text = "high"
popup/item_2/id = 2

[node name="AA" type="HBoxContainer" parent="MarginContainer/PanelContainer/VBoxContainer/Video"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/VBoxContainer/Video/AA"]
layout_mode = 2
size_flags_horizontal = 3
text = "MSAA"

[node name="CheckBox" type="OptionButton" parent="MarginContainer/PanelContainer/VBoxContainer/Video/AA"]
layout_mode = 2
selected = 2
item_count = 4
popup/item_0/text = "disabled"
popup/item_0/id = 0
popup/item_1/text = "2x"
popup/item_1/id = 1
popup/item_2/text = "4x"
popup/item_2/id = 2
popup/item_3/text = "8x"
popup/item_3/id = 3

[node name="Controls" type="VBoxContainer" parent="MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/VBoxContainer/Controls"]
layout_mode = 2
text = "CONTROLS"
label_settings = SubResource("LabelSettings_a6yft")
horizontal_alignment = 1

[node name="Sensitivity" type="HBoxContainer" parent="MarginContainer/PanelContainer/VBoxContainer/Controls"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/VBoxContainer/Controls/Sensitivity"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.3
text = "Sensitivity"

[node name="SensitivityLabel" type="Label" parent="MarginContainer/PanelContainer/VBoxContainer/Controls/Sensitivity"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.2
text = "50"
horizontal_alignment = 1

[node name="SensitivityHSlider" type="HSlider" parent="MarginContainer/PanelContainer/VBoxContainer/Controls/Sensitivity"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="Crosshair" type="VBoxContainer" parent="MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
alignment = 1

[node name="CrosshairLabel3" type="Label" parent="MarginContainer/PanelContainer/VBoxContainer/Crosshair"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 20
text = "CROSSHAIR"
label_settings = SubResource("LabelSettings_a6yft")
horizontal_alignment = 1
vertical_alignment = 1

[node name="PreviewColor" type="HBoxContainer" parent="MarginContainer/PanelContainer/VBoxContainer/Crosshair"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
theme_override_constants/separation = 32
alignment = 1

[node name="Panel" type="PanelContainer" parent="MarginContainer/PanelContainer/VBoxContainer/Crosshair/PreviewColor"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
mouse_default_cursor_shape = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_2ty5h")

[node name="Crosshair" type="ColorRect" parent="MarginContainer/PanelContainer/VBoxContainer/Crosshair/PreviewColor/Panel"]
unique_name_in_owner = true
material = ExtResource("2_xutny")
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
mouse_default_cursor_shape = 3

[node name="ColorPicker" type="ColorPicker" parent="MarginContainer/PanelContainer/VBoxContainer/Crosshair/PreviewColor"]
unique_name_in_owner = true
custom_minimum_size = Vector2(256, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 0
mouse_default_cursor_shape = 3
edit_alpha = false
edit_intensity = false
picker_shape = 4
can_add_swatches = false
sampler_visible = false
color_modes_visible = false
hex_visible = false
presets_visible = false

[node name="InverseColor" type="HBoxContainer" parent="MarginContainer/PanelContainer/VBoxContainer/Crosshair"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/VBoxContainer/Crosshair/InverseColor"]
layout_mode = 2
size_flags_horizontal = 3
text = "use inverse screen color"

[node name="CheckBox" type="CheckBox" parent="MarginContainer/PanelContainer/VBoxContainer/Crosshair/InverseColor"]
unique_name_in_owner = true
layout_mode = 2
size_flags_stretch_ratio = 0.6
mouse_filter = 1
mouse_default_cursor_shape = 3
alignment = 1
icon_alignment = 1

[node name="Length" type="HBoxContainer" parent="MarginContainer/PanelContainer/VBoxContainer/Crosshair"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/VBoxContainer/Crosshair/Length"]
layout_mode = 2
size_flags_horizontal = 3
text = "length"

[node name="LengthLabel" type="Label" parent="MarginContainer/PanelContainer/VBoxContainer/Crosshair/Length"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "0.1"
horizontal_alignment = 2

[node name="LenghtHSlider" type="HSlider" parent="MarginContainer/PanelContainer/VBoxContainer/Crosshair/Length"]
unique_name_in_owner = true
custom_minimum_size = Vector2(256, 0)
layout_mode = 2
size_flags_vertical = 1
size_flags_stretch_ratio = 4.0
mouse_default_cursor_shape = 3

[node name="Thickness" type="HBoxContainer" parent="MarginContainer/PanelContainer/VBoxContainer/Crosshair"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/VBoxContainer/Crosshair/Thickness"]
layout_mode = 2
size_flags_horizontal = 3
text = "thickness"

[node name="ThickLabel" type="Label" parent="MarginContainer/PanelContainer/VBoxContainer/Crosshair/Thickness"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "0.1"
horizontal_alignment = 2

[node name="ThickHSlider" type="HSlider" parent="MarginContainer/PanelContainer/VBoxContainer/Crosshair/Thickness"]
unique_name_in_owner = true
custom_minimum_size = Vector2(256, 0)
layout_mode = 2
size_flags_vertical = 1
size_flags_stretch_ratio = 4.0
mouse_default_cursor_shape = 3

[node name="Gap" type="HBoxContainer" parent="MarginContainer/PanelContainer/VBoxContainer/Crosshair"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/VBoxContainer/Crosshair/Gap"]
layout_mode = 2
size_flags_horizontal = 3
text = "gap"

[node name="GapLabel" type="Label" parent="MarginContainer/PanelContainer/VBoxContainer/Crosshair/Gap"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "0.1"
horizontal_alignment = 2

[node name="GapHSlider" type="HSlider" parent="MarginContainer/PanelContainer/VBoxContainer/Crosshair/Gap"]
unique_name_in_owner = true
custom_minimum_size = Vector2(256, 0)
layout_mode = 2
size_flags_vertical = 1
mouse_default_cursor_shape = 3

[node name="Halo" type="HBoxContainer" parent="MarginContainer/PanelContainer/VBoxContainer/Crosshair"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/VBoxContainer/Crosshair/Halo"]
layout_mode = 2
size_flags_horizontal = 3
text = "halo"

[node name="HaloLabel" type="Label" parent="MarginContainer/PanelContainer/VBoxContainer/Crosshair/Halo"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "0.1"
horizontal_alignment = 2

[node name="HaloHSlider" type="HSlider" parent="MarginContainer/PanelContainer/VBoxContainer/Crosshair/Halo"]
unique_name_in_owner = true
custom_minimum_size = Vector2(256, 0)
layout_mode = 2
size_flags_vertical = 1
mouse_default_cursor_shape = 3

[node name="ReturnButton" type="Button" parent="MarginContainer/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_a6yft")
theme_override_styles/pressed = SubResource("StyleBoxFlat_a6yft")
theme_override_styles/hover = SubResource("StyleBoxFlat_a6yft")
theme_override_styles/disabled = SubResource("StyleBoxFlat_a6yft")
theme_override_styles/focus = SubResource("StyleBoxFlat_a6yft")
text = "RETURN"

[connection signal="value_changed" from="MarginContainer/PanelContainer/VBoxContainer/Audio/Master/MasterSlider" to="." method="_on_master_slider_value_changed"]
[connection signal="value_changed" from="MarginContainer/PanelContainer/VBoxContainer/Audio/Music/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="MarginContainer/PanelContainer/VBoxContainer/Audio/Sounds/SoundsSlider" to="." method="_on_sounds_slider_value_changed"]
[connection signal="toggled" from="MarginContainer/PanelContainer/VBoxContainer/Video/Fullscreen/CheckBox" to="." method="_on_fs_toggled"]
[connection signal="toggled" from="MarginContainer/PanelContainer/VBoxContainer/Video/Vsync/CheckBox" to="." method="_on_vsync_toggled"]
[connection signal="item_selected" from="MarginContainer/PanelContainer/VBoxContainer/Video/Shadows/ShadowButton" to="." method="_on_shadow_button_item_selected"]
[connection signal="item_selected" from="MarginContainer/PanelContainer/VBoxContainer/Video/AA/CheckBox" to="." method="_on_check_box_item_selected"]
[connection signal="value_changed" from="MarginContainer/PanelContainer/VBoxContainer/Controls/Sensitivity/SensitivityHSlider" to="." method="_on_sensitivity_h_slider_value_changed"]
[connection signal="color_changed" from="MarginContainer/PanelContainer/VBoxContainer/Crosshair/PreviewColor/ColorPicker" to="." method="_on_color_picker_color_changed"]
[connection signal="toggled" from="MarginContainer/PanelContainer/VBoxContainer/Crosshair/InverseColor/CheckBox" to="." method="_on_inverse_color_toggled"]
[connection signal="value_changed" from="MarginContainer/PanelContainer/VBoxContainer/Crosshair/Length/LenghtHSlider" to="." method="_on_lenght_h_slider_value_changed"]
[connection signal="value_changed" from="MarginContainer/PanelContainer/VBoxContainer/Crosshair/Thickness/ThickHSlider" to="." method="_on_thick_h_slider_value_changed"]
[connection signal="value_changed" from="MarginContainer/PanelContainer/VBoxContainer/Crosshair/Gap/GapHSlider" to="." method="_on_gap_h_slider_value_changed"]
[connection signal="value_changed" from="MarginContainer/PanelContainer/VBoxContainer/Crosshair/Halo/HaloHSlider" to="." method="_on_halo_h_slider_value_changed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/VBoxContainer/ReturnButton" to="." method="_on_button_pressed"]
